fix: connecting search and some css QOL readability

--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,8 @@ body {
     margin-bottom: 0.2rem;
     padding: 0.2rem;
     font-size: 0.8rem;
+    border-bottom-style: solid;    
+    border-color: white;
 }
 
 .repl-button {
